@@ -65,6 +65,7 @@
 * Orbital: add `verify_amount` field [ajawadmirza] #4376
 * Credorax: add `recipient_street_address`, `recipient_city`, `recipient_province_code`, and `recipient_country_code` fields [ajawadmirza] #4384
 * Airwallex: add support for stored credentials [drkjc] #4382
+* Rapyd: Add metadata and ewallet_id options [naashton] #4387
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
